--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,14 @@ body{
     margin: 0;
     overflow: hidden;
     font-family: Arial;
+    background:#888;
 }
 
+#canvasparent {
+    width:500px;
+    height:400px;
+    margin:200px auto;
+}
 
 #legend-background {
     background: #000;
@@ -53,11 +59,16 @@ body{
 
 #details { 
     z-index:8;
+    background: #000;
     color:#fff;
     position: absolute;
     top:20px;
     left:20px;
-     }
+    padding:10px 15px 5px 10px;
+    border-radius:10px;
+}
+
+#details h2 { margin-top:0px; }
 
 #tooltip {
     z-index: 9999;
