--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,11 +88,11 @@ body{
 #controls a { padding:0px; margin:0px; position:absolute; background:#000; border:1px solid #fff; text-align: center; font-weight:bold; color:#fff; cursor:pointer; width:28px; height:28px; line-height: 28px;}
 #controls a:hover { background: #333; }
 
-#btnup { top:0px; left:30px; }
-#btnleft { top:30px; left:0px; }
-#btnreset { top:30px; left:30px; }
-#btnright { top:30px; left:60px; }
-#btndown { top:60px; left:30px; }
+#btnup { top:1px; left:30px; }
+#btnleft { top:30px; left:1px; }
+#btnreset { top:31px; left:31px; }
+#btnright { top:30px; left:59px; }
+#btndown { top:59px; left:30px; }
 
 #btnup {
     -webkit-border-top-left-radius: 3px;
@@ -130,4 +130,4 @@ body{
     border-bottom-left-radius: 3px;
 }
 
-#controls > a#btnreset { border:0px none; }
+#controls > a#btnreset { border:0px none; width:29px; height:29px; }
