--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,14 +5,24 @@ body{
     background:#888;
 }
 
-#pieChart {
-    width:500px;
+/* -- the div neeeeeeeeeeds width and height or it does NOT work -- */
+/* maybe fallback or something? */
+#blatestpie {
+    width:700px;
     height:400px;
     border:2px solid #fff;
+    position: relative;
 }
 
+#blatestpie2 {
+    width:700px;
+    height:400px;
+    border:2px solid #fff;
+    position:relative;
+}
+
+
 .legend {
-    background: #000;
     position: absolute;
     top: 20px;
     right: 20px;
@@ -22,7 +32,7 @@ body{
 }
 
 .legend li {
-    color:#fff;
+    color:#000;
     margin-bottom:5px;
     padding:3px 0;
 }
@@ -55,7 +65,7 @@ body{
 
 .details h2 { margin-top:0px; }
 
-.tooltip {
+#tooltip {
     z-index: 9999;
     padding:10px;
     background: #ccc;
@@ -63,11 +73,11 @@ body{
     border-radius:5px;
 }
 
-.tooltip h4 { padding-bottom:5px; font-size:20px; padding:0px; margin:0px 0px 5px 0px; }
+#tooltip h4 { padding-bottom:5px; font-size:20px; padding:0px; margin:0px 0px 5px 0px; }
 
-.controls { z-index:9999; position: relative; }
-.controls a { padding:0px; margin:0px; position:absolute; background:#000; border:1px solid #fff; text-align: center; font-weight:bold; color:#fff; cursor:pointer; width:28px; height:28px; line-height: 28px;}
-.controls a:hover { background: #333; }
+.control { z-index:9999; position: absolute; bottom:100px; left:10px; } /* bottom: 100px; macht 0 sinn ... todo! */
+.control a { padding:0px; margin:0px; position:absolute; background:#000; border:1px solid #fff; text-align: center; font-weight:bold; color:#fff; cursor:pointer; width:28px; height:28px; line-height: 28px;}
+.control a:hover { background: #333; }
 
 .btnup { top:1px; left:30px; }
 .btnleft { top:30px; left:1px; }
@@ -111,4 +121,4 @@ body{
     border-bottom-left-radius: 3px;
 }
 
-.controls > a.btnreset { border:0px none; width:29px; height:29px; }
+.control > a.btnreset { border:0px none; width:29px; height:29px; }
