fixed bug with css and html..

--- a/public/css/anchart3d.css
+++ b/public/css/anchart3d.css
@@ -6,7 +6,7 @@
 /* OUTER PARENTS                                            */
 /* ======================================================== */
 
-#pieChart {
+#lineChart {
       
       /* required */
       width:858px;
