--- a/public/css/anchart3d.css
+++ b/public/css/anchart3d.css
@@ -30,6 +30,18 @@
     margin-top:10px;
 }
 
+#scatterChart {
+    
+      /* required */
+      width:757px;
+      height:400px;
+
+    background:#aaa;
+    position:relative;
+    border:1px solid #000;
+    margin-top:10px;
+}
+
 /* ======================================================== */
 /* LEGEND                                                   */
 /* ======================================================== */
