--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -57,6 +57,8 @@ a:hover { color:#84bb44; }
 
 #menu .active {color:#84bb44;}
 
+.fhgreen {color:#84bb44;}
+
 .code { font-weight:bold; font-family:"Courier New", Courier, monospace; display:block; padding:20px; border:1px solid #333; background:#cdc; text-align: center; margin:10px 50px; }
 
 dt {font-weight:bold; color:#84bb44; }
